2007-06-17  higepon  <higepon@users.sourceforge.jp>

        * Makefile: Add audio_server2/client build.

2007-06-03  higepon  <higepon@users.sourceforge.jp>

        * Set svn:inore.

2007-06-02  higepon  <higepon@users.sourceforge.jp>

        * Gui/libgui/System/Mona/Info.cpp (Mona): Add gui_move_window.

2007-06-01  higepon  <higepon@users.sourceforge.jp>

        * Gui/gui/window.cpp (WindowHandler): Add MSG_GUISERVER_GETTITLE.

        * Gui/libgui/System/Mona/Info.cpp (gui_get_window_title): Add.

        * Gui/gui/servers/gui.h : Add MSG_GUISERVER_GETTITLE.

        * Gui/libgui/System/Mona/Info.cpp (gui_enum_windows): Add.

2007-05-31  higepon  <higepon@users.sourceforge.jp>

        * Gui/libgui/System/Mona/Info.cpp : Add.

        * Gui/libgui/gui/System/Mona/Info.h: Add.

        * Gui/gui/servers/gui.h (struct): Add name attribute to guiserver_window.
                                  (enum): Add MSG_GUISERVER_ENUMWINDOWS.

2007-05-30  higepon  <higepon@users.sourceforge.jp>

        * Move libgui from Graphics to Gui.

        * Rename X to Gui.

2007-05-27  higepon  <higepon@users.sourceforge.jp>

        * Graphics/libgui/stub.cpp : Bug fix. libbaygui should depend on libc. If not, dll initialize sequneces will be broken.

        * Graphics/libbaygui/Makefile : Add "-lmonalibc-imp" for the bug below.

        * Graphics/libbaygui/main.cpp: Bug fix. libbaygui should depend on libc. If not, dll initialize sequneces will be broken.

        * Emulators/monasq/monasq.cpp: Remove MonaMain and add main.

        * Graphics/libbaygui/main.cpp: Remove main().

2007-05-18  higepon  <higepon@users.sourceforge.jp>

        * Shells/mshell/Form1.cpp (StdoutMessageLoop): don't display ^EOP

        * Graphics/bitmap/MONALISA.JPG: add sample jpg.

2007-05-12  higepon  <higepon@users.sourceforge.jp>

        * Shells/mshell/Form1.cpp : GUI Shell for Scheme works well.
        
        * Shells/mshell/Form1.cpp (terminal::Writer): erase cursor when line feed.
