@@ -1,143 +1,0 @@
-main.o: main.cpp monadev.h NicServer.h /usr/local/mona/include/monapi.h \
-  /usr/local/mona/include/sys/types.h /usr/local/mona/include/sys/error.h \
-  /usr/local/mona/include/monapi/Observer.h \
-  /usr/local/mona/include/sys/HList.h /usr/local/mona/include/sys/List.h \
-  /usr/local/mona/include/monapi/Date.h \
-  /usr/local/mona/include/monapi/Screen.h \
-  /usr/local/mona/include/monapi/Server.h \
-  /usr/local/mona/include/monapi/System.h \
-  /usr/local/mona/include/monapi/Message.h \
-  /usr/local/mona/include/monapi/MonaApplication.h \
-  /usr/local/mona/include/monapi/MemoryMap.h \
-  /usr/local/mona/include/monapi/Thread.h \
-  /usr/local/mona/include/monapi/string.h \
-  /usr/local/mona/include/monapi/MemoryManager.h \
-  /usr/local/mona/include/monapi/Color.h \
-  /usr/local/mona/include/monapi/Random.h \
-  /usr/local/mona/include/monapi/syscall.h \
-  /usr/local/mona/include/monapi/Keys.h Nic.h \
-  /usr/local/mona/include/monapi/io.h \
-  /usr/local/mona/include/monapi/messages.h \
-  /usr/local/mona/include/monapi/cmemoryinfo.h \
-  /usr/local/mona/include/servers/keyboard.h \
-  /usr/local/mona/include/servers/mouse.h \
-  /usr/local/mona/include/servers/process.h \
-  /usr/local/mona/include/servers/file.h \
-  /usr/local/mona/include/servers/servers.h NicFactory.h
-NE2000.o: NE2000.cpp NE2000.h /usr/local/mona/include/sys/types.h \
-  /usr/local/mona/include/monapi.h /usr/local/mona/include/sys/error.h \
-  /usr/local/mona/include/monapi/Observer.h \
-  /usr/local/mona/include/sys/HList.h /usr/local/mona/include/sys/List.h \
-  /usr/local/mona/include/monapi/Date.h \
-  /usr/local/mona/include/monapi/Screen.h \
-  /usr/local/mona/include/monapi/Server.h \
-  /usr/local/mona/include/monapi/System.h \
-  /usr/local/mona/include/monapi/Message.h \
-  /usr/local/mona/include/monapi/MonaApplication.h \
-  /usr/local/mona/include/monapi/MemoryMap.h \
-  /usr/local/mona/include/monapi/Thread.h \
-  /usr/local/mona/include/monapi/string.h \
-  /usr/local/mona/include/monapi/MemoryManager.h \
-  /usr/local/mona/include/monapi/Color.h \
-  /usr/local/mona/include/monapi/Random.h \
-  /usr/local/mona/include/monapi/syscall.h \
-  /usr/local/mona/include/monapi/Keys.h Nic.h \
-  /usr/local/mona/include/monapi/io.h \
-  /usr/local/mona/include/monapi/messages.h \
-  /usr/local/mona/include/monapi/cmemoryinfo.h \
-  /usr/local/mona/include/servers/keyboard.h \
-  /usr/local/mona/include/servers/mouse.h \
-  /usr/local/mona/include/servers/process.h \
-  /usr/local/mona/include/servers/file.h \
-  /usr/local/mona/include/servers/servers.h NE2000const.h
-NicFactory.o: NicFactory.cpp /usr/local/mona/include/pci/Pci.h \
-  /usr/local/mona/include/sys/types.h \
-  /usr/local/mona/include/monapi/CString.h \
-  /usr/local/mona/include/monapi/Array.h /usr/local/mona/include/monapi.h \
-  /usr/local/mona/include/sys/error.h \
-  /usr/local/mona/include/monapi/Observer.h \
-  /usr/local/mona/include/sys/HList.h /usr/local/mona/include/sys/List.h \
-  /usr/local/mona/include/monapi/Date.h \
-  /usr/local/mona/include/monapi/Screen.h \
-  /usr/local/mona/include/monapi/Server.h \
-  /usr/local/mona/include/monapi/System.h \
-  /usr/local/mona/include/monapi/Message.h \
-  /usr/local/mona/include/monapi/MonaApplication.h \
-  /usr/local/mona/include/monapi/MemoryMap.h \
-  /usr/local/mona/include/monapi/Thread.h \
-  /usr/local/mona/include/monapi/string.h \
-  /usr/local/mona/include/monapi/MemoryManager.h \
-  /usr/local/mona/include/monapi/Color.h \
-  /usr/local/mona/include/monapi/Random.h \
-  /usr/local/mona/include/monapi/syscall.h \
-  /usr/local/mona/include/monapi/Keys.h NicFactory.h Nic.h \
-  /usr/local/mona/include/monapi/io.h \
-  /usr/local/mona/include/monapi/messages.h \
-  /usr/local/mona/include/monapi/cmemoryinfo.h \
-  /usr/local/mona/include/servers/keyboard.h \
-  /usr/local/mona/include/servers/mouse.h \
-  /usr/local/mona/include/servers/process.h \
-  /usr/local/mona/include/servers/file.h \
-  /usr/local/mona/include/servers/servers.h NE2000.h
-NicServer.o: NicServer.cpp NicServer.h /usr/local/mona/include/monapi.h \
-  /usr/local/mona/include/sys/types.h /usr/local/mona/include/sys/error.h \
-  /usr/local/mona/include/monapi/Observer.h \
-  /usr/local/mona/include/sys/HList.h /usr/local/mona/include/sys/List.h \
-  /usr/local/mona/include/monapi/Date.h \
-  /usr/local/mona/include/monapi/Screen.h \
-  /usr/local/mona/include/monapi/Server.h \
-  /usr/local/mona/include/monapi/System.h \
-  /usr/local/mona/include/monapi/Message.h \
-  /usr/local/mona/include/monapi/MonaApplication.h \
-  /usr/local/mona/include/monapi/MemoryMap.h \
-  /usr/local/mona/include/monapi/Thread.h \
-  /usr/local/mona/include/monapi/string.h \
-  /usr/local/mona/include/monapi/MemoryManager.h \
-  /usr/local/mona/include/monapi/Color.h \
-  /usr/local/mona/include/monapi/Random.h \
-  /usr/local/mona/include/monapi/syscall.h \
-  /usr/local/mona/include/monapi/Keys.h Nic.h \
-  /usr/local/mona/include/monapi/io.h \
-  /usr/local/mona/include/monapi/messages.h \
-  /usr/local/mona/include/monapi/cmemoryinfo.h \
-  /usr/local/mona/include/servers/keyboard.h \
-  /usr/local/mona/include/servers/mouse.h \
-  /usr/local/mona/include/servers/process.h \
-  /usr/local/mona/include/servers/file.h \
-  /usr/local/mona/include/servers/servers.h NicFactory.h
-monadev.o: monadev.cpp NicServer.h /usr/local/mona/include/monapi.h \
-  /usr/local/mona/include/sys/types.h /usr/local/mona/include/sys/error.h \
-  /usr/local/mona/include/monapi/Observer.h \
-  /usr/local/mona/include/sys/HList.h /usr/local/mona/include/sys/List.h \
-  /usr/local/mona/include/monapi/Date.h \
-  /usr/local/mona/include/monapi/Screen.h \
-  /usr/local/mona/include/monapi/Server.h \
-  /usr/local/mona/include/monapi/System.h \
-  /usr/local/mona/include/monapi/Message.h \
-  /usr/local/mona/include/monapi/MonaApplication.h \
-  /usr/local/mona/include/monapi/MemoryMap.h \
-  /usr/local/mona/include/monapi/Thread.h \
-  /usr/local/mona/include/monapi/string.h \
-  /usr/local/mona/include/monapi/MemoryManager.h \
-  /usr/local/mona/include/monapi/Color.h \
-  /usr/local/mona/include/monapi/Random.h \
-  /usr/local/mona/include/monapi/syscall.h \
-  /usr/local/mona/include/monapi/Keys.h Nic.h \
-  /usr/local/mona/include/monapi/io.h \
-  /usr/local/mona/include/monapi/messages.h \
-  /usr/local/mona/include/monapi/cmemoryinfo.h \
-  /usr/local/mona/include/servers/keyboard.h \
-  /usr/local/mona/include/servers/mouse.h \
-  /usr/local/mona/include/servers/process.h \
-  /usr/local/mona/include/servers/file.h \
-  /usr/local/mona/include/servers/servers.h NicFactory.h Util.h \
-  /usr/local/mona/include/monapi/CString.h \
-  /usr/local/mona/include/monapi/Array.h \
-  /usr/local/mona/include/monalibc.h \
-  /usr/local/mona/include/monalibc/ctype.h \
-  /usr/local/mona/include/monalibc/limits.h \
-  /usr/local/mona/include/monalibc/stdarg.h \
-  /usr/local/mona/include/monalibc/stdlib.h \
-  /usr/local/mona/include/monalibc/stdio.h \
-  /usr/local/mona/include/monalibc/math.h \
-  /usr/local/mona/include/monalibc/float.h
