@@ -1,3 +1,7 @@
+2007-06-20  higepon  <higepon@users.sourceforge.jp>
+
+        * Net/uip/Mona/Makefile (MONADIR): Fixed $(MONADIR) env.
+
 2007-06-17  higepon  <higepon@users.sourceforge.jp>
 
         * Makefile: Add audio_server2/client build.
